ajustes no projeto para que bucket funcione
