# backend/docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.LoginRequest"
+                            "$ref": "#/definitions/v1.LoginRequest"
                         }
                     }
                 ],
@@ -76,7 +76,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v0.OngListResponse"
+                            "$ref": "#/definitions/v1.OngListResponse"
                         }
                     }
                 }
@@ -105,7 +105,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.CreateOngInput"
+                            "$ref": "#/definitions/v1.CreateOngInput"
                         }
                     }
                 ],
@@ -160,7 +160,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.CreateOngInput"
+                            "$ref": "#/definitions/v1.CreateOngInput"
                         }
                     }
                 ],
@@ -278,7 +278,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v0.PetListResponse"
+                            "$ref": "#/definitions/v1.PetListResponse"
                         }
                     }
                 }
@@ -307,7 +307,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.CreatePetInput"
+                            "$ref": "#/definitions/v1.CreatePetInput"
                         }
                     }
                 ],
@@ -331,13 +331,49 @@
             }
         },
         "/api/v1/pets/{id}": {
+            "get": {
+                "description": "Retorna um Pet específico pelo ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Pet"
+                ],
+                "summary": "Busca um Pet pelo ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID do Pet",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Pet"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Atualiza os dados de um Pet pelo ID",
+                "description": "Atualiza os dados de um Pet pelo ID (não atualiza imagens)",
                 "consumes": [
                     "application/json"
                 ],
@@ -362,7 +398,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.CreatePetInput"
+                            "$ref": "#/definitions/v1.CreatePetInput"
                         }
                     }
                 ],
@@ -554,7 +590,7 @@
                     "description": "ARRAY PostgreSQL (text[])",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/models.PetImage"
                     }
                 },
                 "nome": {
@@ -577,7 +613,22 @@
                 }
             }
         },
-        "v0.CreateOngInput": {
+        "models.PetImage": {
+            "type": "object",
+            "properties": {
+                "pet_id": {
+                    "type": "string"
+                },
+                "position": {
+                    "description": "ordem no frontend",
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.CreateOngInput": {
             "type": "object",
             "properties": {
                 "email": {
@@ -602,7 +653,7 @@
                 }
             }
         },
-        "v0.CreatePetInput": {
+        "v1.CreatePetInput": {
             "type": "object",
             "properties": {
                 "descricao": {
@@ -612,23 +663,15 @@
                     "type": "string"
                 },
                 "formulario_id": {
-                    "description": "opcional",
                     "type": "string"
                 },
                 "idade": {
                     "type": "integer"
                 },
-                "imagens": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "nome": {
                     "type": "string"
                 },
                 "ong_id": {
-                    "description": "obrigatório",
                     "type": "string"
                 },
                 "peso": {
@@ -645,7 +688,7 @@
                 }
             }
         },
-        "v0.LoginRequest": {
+        "v1.LoginRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -656,7 +699,7 @@
                 }
             }
         },
-        "v0.OngListResponse": {
+        "v1.OngListResponse": {
             "type": "object",
             "properties": {
                 "dados": {
@@ -676,7 +719,7 @@
                 }
             }
         },
-        "v0.PetListResponse": {
+        "v1.PetListResponse": {
             "type": "object",
             "properties": {
                 "dados": {
